# matterlights

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
scripts/: guided-setup.ps1  install-autostart.ps1  remove-autostart.ps1  start-dashboard.ps1  start-sync.ps1  start-zone-ui.ps1
src/matterlights/: __main__.py  config.py  dashboard.py  discover.py  display_power.py  home_assistant.py  main.py  playback.py  preview.py  process_lock.py  screen.py  zone_ui.py
tests/: test_config.py  test_dashboard.py  test_playback.py  test_process_lock.py
