[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matterlights"
version = "0.1.0"
description = "Windows screen-to-light sync for Home Assistant and Matter lights"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = [
    "ambilight",
    "flask",
    "home-assistant",
    "matter",
    "screen-sync",
    "windows",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "flask>=3.1.0",
    "mss>=10.1.0",
    "requests>=2.32.0",
]

[project.scripts]
matterlights-sync = "matterlights.main:main"
matterlights-discover = "matterlights.discover:main"
matterlights-zones = "matterlights.zone_ui:main"
matterlights-dashboard = "matterlights.dashboard:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
